[package]
edition = "2021"
name = "activesg_gym_datamine"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.7"
base64 = "0.13.0"
chrono = {version = "0.4.19", features = ["serde"]}
lazy_static = "1.4.0"
log = "0.4.14"
mimalloc = "0.1.27"
openssl = {version = "0.10"}
regex = "1"
reqwest = {version = "0.11.8", features = ["json", "cookies", "rustls-tls"], default-features = false}
scraper = "0.12.0"
serde = "1.0.133"
serde_json = "1.0"
thiserror = "1.0"
tokio = {version = "1.15.0", features = ["full"]}
env_logger = "0.9.0"